--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Random chatbot made by alex",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
     "apiai": "^4.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "micro": "^9.3.0",
     "request": "^2.85.0"
   }
 }
